ops/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: 192.168.0.5
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: "nginx-private"
  rules:
  - host: argocd.wagner.gg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - secretName: argocd.wagner.gg
    hosts:
    - argocd.wagner.gg
